; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/duck/lightsaver/extr_lightsaver.c_backlight_set.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/duck/lightsaver/extr_lightsaver.c_backlight_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BACKLIGHT_ALPHAS = common dso_local global i32 0, align 4
@PORTB = common dso_local global i32 0, align 4
@BACKLIGHT_FKEYS = common dso_local global i32 0, align 4
@BACKLIGHT_MODNUM = common dso_local global i32 0, align 4
@BACKLIGHT_NUMPAD = common dso_local global i32 0, align 4
@PORTE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @backlight_set(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp sgt i64 %3, 0
  br i1 %4, label %5, label %22

5:                                                ; preds = %1
  %6 = load i32, i32* @BACKLIGHT_ALPHAS, align 4
  %7 = xor i32 %6, -1
  %8 = load i32, i32* @PORTB, align 4
  %9 = and i32 %8, %7
  store i32 %9, i32* @PORTB, align 4
  %10 = load i32, i32* @BACKLIGHT_FKEYS, align 4
  %11 = xor i32 %10, -1
  %12 = load i32, i32* @PORTB, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* @PORTB, align 4
  %14 = load i32, i32* @BACKLIGHT_MODNUM, align 4
  %15 = xor i32 %14, -1
  %16 = load i32, i32* @PORTB, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* @PORTB, align 4
  %18 = load i32, i32* @BACKLIGHT_NUMPAD, align 4
  %19 = xor i32 %18, -1
  %20 = load i32, i32* @PORTE, align 4
  %21 = and i32 %20, %19
  store i32 %21, i32* @PORTE, align 4
  br label %35

22:                                               ; preds = %1
  %23 = load i32, i32* @BACKLIGHT_ALPHAS, align 4
  %24 = load i32, i32* @PORTB, align 4
  %25 = or i32 %24, %23
  store i32 %25, i32* @PORTB, align 4
  %26 = load i32, i32* @BACKLIGHT_FKEYS, align 4
  %27 = load i32, i32* @PORTB, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* @PORTB, align 4
  %29 = load i32, i32* @BACKLIGHT_MODNUM, align 4
  %30 = load i32, i32* @PORTB, align 4
  %31 = or i32 %30, %29
  store i32 %31, i32* @PORTB, align 4
  %32 = load i32, i32* @BACKLIGHT_NUMPAD, align 4
  %33 = load i32, i32* @PORTE, align 4
  %34 = or i32 %33, %32
  store i32 %34, i32* @PORTE, align 4
  br label %35

35:                                               ; preds = %22, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
